# vsoc

./: .gitignore  .gitmodules  README.md
docs/: build-vsoc.md
hw/: Kconfig  meson.build
hw/audio/: hda-codec.c
hw/express-camera/: Kconfig  camera_utils.m  express_camera.c  meson.build
hw/express-codec/: Kconfig  colorspace.c  dcodec_audio.c  dcodec_component.c  dcodec_vdec.c  dcodec_venc.c  device_cuda.c  express_codec.c  meson.build
hw/express-gpu/: Kconfig  device_interface_window.c  egl_config.c  egl_context.c  egl_display.c  egl_display_darwin.c  egl_display_wgl.c  egl_draw.c  egl_surface.c  egl_sync.c  egl_trans.c  egl_window_egl.c  egl_window_nsgl.m  egl_window_wgl.c  express_display.c  express_gpu.c  express_gpu_render.c  gl_helper.c  glv1.c  glv3_context.c  glv3_mem.c  glv3_program.c  glv3_resource.c  glv3_status.c  glv3_texture.c  glv3_trans.c  glv3_vertex.c  meson.build  test_trans.c
hw/express-input/: Kconfig  express_keyboard.c  express_touchscreen.c  meson.build
hw/express-mem/: Kconfig  express_mem.c  express_mem_worker.c  express_sync.c  meson.build
hw/express-network/: Kconfig  em_config.h  em_core.c  em_gsm.c  em_remote_call.c  em_ruim.c  em_sim_card.c  em_sms.c  em_utils.c  express_bridge.c  express_modem.c  meson.build
hw/express-network/utils/: timezone.c
hw/express-sensor/: Kconfig  express_accel.c  express_battery.c  express_gps.c  express_gyro.c  express_mic.c  meson.build
hw/intc/: apic.c
hw/teleport-express/: Kconfig  express_device_ctrl.c  express_event.c  express_handle_thread.c  express_log.c  meson.build  teleport_express.c  teleport_express_call.c  teleport_express_distribute.c  teleport_express_pci.c  teleport_express_register.c
hw/usb/: dev-hid.c
hw/virtio/: virtio.c
include/: glib-compat.h
include/glad/: glad.h
include/hw/express-camera/: express_camera.h
include/hw/express-codec/: colorspace.h  dcodec.h  dcodec_audio.h  dcodec_component.h  dcodec_shared.h  dcodec_video.h  device_cuda.h  express_codec.h
include/hw/express-codec/OMX/: OMX_Audio.h  OMX_AudioExt.h  OMX_Component.h  OMX_ComponentExt.h  OMX_Core.h  OMX_CoreExt.h  OMX_FFMPEG_Extn.h  OMX_IVCommon.h  OMX_Image.h  OMX_ImageExt.h  OMX_Index.h  OMX_IndexExt.h  OMX_Other.h  OMX_Video.h  OMX_VideoExt.h
include/hw/express-codec/cuda/: dynlink_cuda.h  dynlink_loader.h
include/hw/express-gpu/: device_interface_window.h  egl_config.h  egl_context.h  egl_define.h  egl_display.h  egl_display_darwin.h  egl_display_wgl.h  egl_draw.h  egl_surface.h  egl_sync.h  egl_trans.h  egl_window.h  eglext.h  eglplatform.h  express_display.h  express_gpu.h  express_gpu_render.h  gl_helper.h  glv1.h  glv3_context.h  glv3_decl.h  glv3_mem.h  glv3_program.h  glv3_resource.h  glv3_status.h  glv3_texture.h  glv3_trans.h  glv3_vertex.h  test_trans.h
include/hw/express-input/: express_keyboard.h  express_touchscreen.h
include/hw/express-mem/: express_mem.h  express_sync.h
include/hw/express-network/: em_core.h  em_gsm.h  em_input.h  em_remote_call.h  em_ruim.h  em_sim_card.h  em_sms.h  em_utils.h  express_bridge.h  express_modem.h
include/hw/express-sensor/: express_accel.h  express_battery.h  express_gps.h  express_gyro.h  express_mic.h  miniaudio.h
include/hw/teleport-express/: express_device_common.h  express_device_ctrl.h  express_event.h  express_handle_thread.h  express_log.h  teleport_express.h  teleport_express_call.h  teleport_express_distribute.h  teleport_express_pci.h  teleport_express_register.h
include/qemu/: osdep.h
include/ui/: input.h
ui/: input-keymap.c  meson.build  sdl2-2d.c  sdl2.c
